macro(add_textutil_test _source)
    set( _test ${_source})
    get_filename_component( _name ${_source} NAME_WE )
    add_executable( ${_name} ${_test} ${_name}.h)
    add_test(NAME ${_name} COMMAND ${_name} )
    ecm_mark_as_test(${_name})
    target_link_libraries( ${_name} Qt::Test KF${KF_MAJOR_VERSION}::TextUtils)
endmacro()

add_textutil_test(converttexttest.cpp)
